# employee-attrition-analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  eval $(ssh-agent -s)  eval $(ssh-agent -s).pub  git config --global --unset credential.helper  makefile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
api/: api_main.py  main.py  schemas.py
app/: main_app.py  ui_config.py
artifacts/: features_matrix.csv  model.pkl
artifacts/features/: X_test.csv  features.pkl  features_matrix.csv
artifacts/models/: best_params.json  best_params_lgbm.json  model.pkl  optimal_threshold.pkl  threshold_optimizado.pkl  xgb_attrition_final.pkl
artifacts/results/: threshold.txt
attrition.egg-info/: SOURCES.txt  requires.txt
data/: features_matrix.csv
data/processed/: employee_attrition_processed.csv
data/raw/: predict_example.json
database/: hr_analytics.db  hr_analytics.sqbpro
models/: features_columns.pkl  model.pkl  production_model.pkl  production_shap_explainer.pkl  threshold_optimizado.pkl
notebooks/: DL_ Explainability.ipynb  Untitled.ipynb  causal_analysis_exploration.ipynb  eda_attrition_funcionarios.ipynb  modeling_ml.ipynb  paranoia.ipynb  threshold_optimization_curves.ipynb
notebooks/.ipynb_checkpoints/: eda_attrition_funcionarios-checkpoint.ipynb  modeling_ml-checkpoint.ipynb
notebooks/artifacts/models/: optimal_threshold.pkl
notebooks/models/: smote_resampler.pkl  threshold_optimizado.pkl  xgb_attrition_final.pkl
reports/: dashboard_employee_attrition.pbix
scripts/: check_db.py  check_model_performance.py  clean_predictions.py  create_explainer.py  create_shap_explainer.py  evaluate_model_deeply.py  generate_predictions.py  load_raw_to_db.py  migrate_to_postgres.py  run_batch_predictions.py  save_causal_insights.py  seed_database.py  test_architectural_integrity.py
sql/: kpi_custo_estimado_turnover.sql  kpi_custo_total.sql  kpi_gerais.sql  kpi_satisfacao_media.sql  kpi_turnover_por_departamento.sql
src/attrition/: causal_analysis.py  data_processing.py  main.py
src/attrition.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/attrition/data/: process.py
src/attrition/features/: engineer.py
src/attrition/models/: evaluate.py  explain.py  predict.py  train.py  tunning.py
src/features/: engineer.py
src/models/: train.py
tests/: test_main_cli.py  test_unit_functions.py
tests/data/: test_process.py
tests/features/: test_engineer.py
tests/models/: test_evaluate.py  test_explain.py  test_train.py
