[project]
name = "employee-attrition-analysis"
version = "0.1.0"
description = "Análise e predição da rotatividade de funcionários com machine learning."
authors = [
    {name = "tentorias",email = "100281291+Tentorias@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=1.24,<2.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "streamlit (>=1.46.0,<2.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "lightgbm (>=4.6.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"

