# Este é o formato que o Poetry entende
[tool.poetry]
name = "employee-attrition-analysis"
version = "0.1.0"
description = "Projeto de análise e predição de rotatividade de funcionários com BI e Machine Learning."
authors = ["tentorias <100281291+Tentorias@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

# Esta seção lista todas as dependências do projeto
[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "1.26.4"
scikit-learn = "1.4.2"
imblearn = "^0.0"
xgboost = "^2.1.0"
optuna = "^3.6.1"
joblib = "^1.4.2"
sqlalchemy = "^2.0.30" 
psycopg2-binary = "^2.9.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
streamlit = "^1.36.0"
shap = "^0.45.1"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
lightgbm = "^4.6.0"
python-multipart = "^0.0.9"


# Esta seção lista as dependências de desenvolvimento
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

# Seção de configuração do build
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"